# IDC

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  NOTICE  README.md
benchmarks/: README.md  aggregate_21seeds.py  audit_surrogates.py  compute_mo_geometric.py  gen_holdout_splits.py  make_convergence_figure.py  make_figures.py  make_normhv_moeed13.py  mo_matched_budget.py  paper_style.py  requirements.txt  run_idc_21seeds.py  run_idc_sensitivity.py  run_olympus.py
benchmarks/baselines/: README.md  run_baselines.py  run_extra_baselines.py
benchmarks/bbob/: README.md  coco_runner.py  constraints_bbob_biobj_mixint.md  parse_cocopp_idc_wins.py  run_bbob_stress.py  run_bbob_suites.py
benchmarks/bbob/results/bbob/: bbob_multistart_mitigation.csv
benchmarks/bbob/results/bbob-biobj-mixint/: per_function_idc_wins.csv  summary_idc_wins.csv
benchmarks/extra_results/: README.md  mo_catalog_hv_igd.csv  mo_matched_budget_summary.csv  photo_pce10_convergence.csv  photo_pce10_extra_baselines.csv  photo_pce10_sensitivity.csv  so_holdout_top05_per_entry.csv  surrogate_audit.csv
benchmarks/holdout/: CMakeLists.txt  compute_holdout_gaps.py  train_surrogate.cpp
cmake/: FindOrFetchOpenNN.cmake
data/: README.md
data/bbob/: SOURCE.md
data/concrete_uci/: SOURCE.md  concrete_uci.csv
data/moeed13/: SOURCE.md  moeed13_sample.csv
data/photo_pce10/: SOURCE.md  photo_pce10.csv
docs/: architecture.md  holdout_procedure.md  hyperparameter_tuning.md  reproducing.md
examples/: README.md
examples/additional/: README.md
examples/additional/concrete_uci_so/: README.md  constraints.yaml
examples/additional/oer_plates/: README.md
examples/common/: yaml_constraints.h
examples/concrete_uci_mo/: CMakeLists.txt  README.md  constraints.yaml  expected_output.csv  main.cpp  problem.yaml  pymoo_fronts.csv  pymoo_summary.csv
examples/concrete_uci_mo/band/: expected_output.csv  problem.yaml  pymoo_fronts.csv  pymoo_summary.csv
examples/concrete_uci_mo/nn/: concrete_uci.json  concrete_uci.py
examples/moeed13/: CMakeLists.txt  README.md  constraints.yaml  expected_output.csv  main.cpp  moeed13_pymoo_fronts.csv  moeed13_pymoo_summary.csv  problem.yaml
examples/moeed13/band/: expected_output.csv  moeed13_pymoo_fronts.csv  moeed13_pymoo_summary.csv  problem.yaml
examples/moeed13/nn/: moeed13.json  moeed13.py
examples/photo_pce10/: CMakeLists.txt  README.md  constraints.yaml  expected_output.csv  main.cpp  problem.yaml
examples/photo_pce10/nn/: photo_pce10.json  photo_pce10.py
experiments/: compute_concrete_mo_hv_feasible_only.py
experiments/concrete_age28/: README.md  compare_age28_vs_full.py  holdout_evidence.csv  holdout_too_small.md  run_age28_chain.py  run_age28_full_data.py
photo_wf3_so/: CMakeLists.txt  README.md  expected_output.csv  main.cpp  problem.yaml
scripts/: compare_outputs.py  reproduce_paper.sh
yacht_mo/: CMakeLists.txt  README.md  expected_output.csv  main.cpp  problem.yaml
